---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-01-01
  Changes:
    - is_space_location check enforced in planet_extend.
    - Readme note added about breaking changes will bump the major version. Special thanks added to MidnightTigger.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-01-01
  Info:
    - Readme fixes.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-01-01
  Changes:
    - API for planets switched from 'planet_type' to 'sprite_only'. This is now simply a boolean that determines whether the prototype should be removed in data-final-fixes and replaced by a sprite on the starmap. With this change, PlanetsLib now supports extra solar systems, binary systems, etc.
    - Form of 'parent' within 'orbit' changed to an object with 'type' and 'name' fields, rather than just a name.
    - Core locale overrides changes to use 'space location' terminology instead of planets and moons.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2025-01-01
  Bugfixes:
    - Fixed items in cargo pod drops being allowed if they were not associated to an entity in Factorio.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2024-12-31
  Info:
    - README.md update
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2024-12-31
  Info:
    - README.md update
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2024-12-31
  Changes: